--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-<p>JULIA CARPENTER</p>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title></title>
+    </head>
+    <body>
+        <main>
+            <article>
+                <header>
+                    <h3></h3>
+                </header>
+                <p></p>
+                <img src="" />
+            </article>
+        </main>
+        <footer>
+            <p></p>
+        </footer>
+    </body>
+</html>
