--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
+            <link type="text/css" rel="stylesheet" href="normalize.css"/>
+            <link type="text/css" rel="stylesheet" href="styles.css"/>
         <title></title>
     </head>
     <body>
