--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
             <link type="text/css" rel="stylesheet" href="normalize.css"/>
             <link type="text/css" rel="stylesheet" href="styles.css"/>
-        <title></title>
+        <title>Julia Carpenter</title>
     </head>
     <body>
         <main>
