--- a/index.html
+++ b/index.html
@@ -3,16 +3,42 @@
     <head>
             <link type="text/css" rel="stylesheet" href="normalize.css"/>
             <link type="text/css" rel="stylesheet" href="styles.css"/>
-        <title>Julia Carpenter</title>
+        <title>Julia's Animals'</title>
     </head>
     <body>
         <main>
             <article>
                 <header>
-                    <h3></h3>
+                    <h3>Carmen Miranda Carpenter</h3>
+                    <h5>My/My parents' Dog</h5>
+                    <img src="" />
                 </header>
-                <p></p>
-                <img src="" />
+                <p>Carmen is an American Cocker Spaniel.</p>
+                <p>She loves walks.  She also loves food and chews and treats.</p>
+                <p>Otherwise, she can be found sleeping on or near the couch.</p>
+                <p>Sometimes she sits up against the pillow sort of like a person.</p>                    
+            </article>
+            <article>
+                <header>
+                    <h3>R2-D2 Wallace</h3>
+                    <h5>My boyfriend's Cat</h5>
+                    <img src="" />
+                </header>
+                <p>R2 is a domestic short-haired black cat.</p>
+                <p>He loves being petted, but he bites.  He also loves playing with little cloth mice.</p>
+                <p>Otherwise, he can be found sleeping on the corner of the bed or on his tower.</p>
+                <p>Sometimes he poses on his back on the floor.</p>                    
+            </article>
+            <article>
+                <header>
+                    <h3>Bhima Dorian Carpenter</h3>
+                    <h5>My brother's Cat</h5>
+                    <img src="" />
+                </header>
+                <p>Bhima is a domestic short-haired tabby cat.</p>
+                <p>He loves going outside and hunting birds.  He also loves 'hunting' our dog Carmen!</p>
+                <p>Otherwise, he can be found sleeping on a soft blanket, a chair, or a bed.</p>
+                <p>Sometimes he gets inside of a box or bag instead!</p>                    
             </article>
         </main>
         <footer>
