Added copyright in footer

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </article>
         </main>
         <footer>
-            <p></p>
+            <p>&copy; Julia Carpenter 2017</p>
         </footer>
     </body>
 </html>
